--- a/index.html
+++ b/index.html
@@ -12,27 +12,35 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
 
     <title>TODO app</title>
   </head>
   <body>
-    <h1>To-Do List</h1>
-    <form>
-      <label for="add"></label>
-      <input type="text" id="add" name="add" placeholder="Add an item!" />
-      <input type="button" value="Submit" onclick="appendList()" />
-      <input type="reset" />
-    </form>
-
-    <div>
-      <ol id="list"></ol>
+    <div class="container">
+      <h1 class="text-center">To-Do List</h1>
+      <div class="container">
+        <ul class="list-group align-items-center">
+          <li class="list-group-item d-flex align-items-center border-0 ms-4">
+            <input type="text" name="" id="add" class="form-control mx-3" />
+            <button
+              class="btn btn-secondary"
+              onclick="appendList()"
+              type="submit"
+              style="background-color: rgb(103 100 204)"
+            >
+              <i class="bi bi-plus"></i>
+            </button>
+          </li>
+        </ul>
+      </div>
+      <div class="container">
+        <ul class="list-group align-items-center" id="list"></ul>
+      </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
-
     <script src="script.js"></script>
   </body>
 </html>
