--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <input type="text" name="" id="add" class="form-control mx-3" />
             <button
               class="btn btn-secondary"
-              onclick="appendList()"
-              type="submit"
+              id="inputButton"
               style="background-color: rgb(103 100 204)"
             >
               <i class="bi bi-plus"></i>
@@ -41,6 +40,7 @@
         <ul class="list-group align-items-center" id="list"></ul>
       </div>
     </div>
+    <script src="functions.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
