Fixed bug with local storage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center">To-Do List</h1>
+      <h1 class="text-center pt-3">To-Do List</h1>
       <div class="container">
         <ul class="list-group align-items-center">
           <li class="list-group-item d-flex align-items-center border-0 ms-4">
